[package]
name = "aika"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[features]

universes = ["dep:rayon"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
bytemuck = "1.23.0"
mesocarp = "0.5.6"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
aika = { path = ".", features = ["universes"] }

[[bench]]
name = "event_throughput"
harness = false