[package]
name = "aika"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[features]

[dependencies]
bytemuck = "1.23.0"
thiserror = "2.0.12"

mesocarp = "0.7.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
aika = { path = "." }

[[bench]]
name = "event_throughput"
harness = false
