[package]

authors = ["Mesocarp"]
description = "Multi-agent coordination framework in Rust with single and multi-threaded execution engines."
edition = "2021"
homepage = "https://github.com/TheMesocarp/aika"
keywords = [
  "multi-agent",
  "simulation",
  "coordination",
  "synchronization",
  "time-warp",
]
license = "LGPL-2.1"
name = "aika"
readme = "README.md"
repository = "https://github.com/TheMesocarp/aika"
version = "0.1.0"


[profile.release]
opt-level = 3

[features]

[dependencies]
bytemuck = "1.23.0"
thiserror = "2.0.12"

mesocarp = "0.7.1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
aika = { path = "." }

[[bench]]
name = "hybrid_throughput"
harness = false
