[package]
name = "aika-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
aika = { path = "..", version = "0.1.0", features = ["timewarp", "universes"] }
rand = "0.9.0"
rand_distr = "0.5.1"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "mc"
path = "montecarlo.rs"

[[bin]]
name = "universe"
path = "parallel_worlds.rs"