[package]
name = "kala-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
kala = { path = "..", version = "0.1.0", features = ["timewarp", "universes"] }
rand = "0.9.0"
rand_distr = "0.5.1"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "mc"
path = "src/montecarlo.rs"

[[bin]]
name = "universe"
path = "src/parallel_worlds.rs"

[[bin]]
name = "timewarp"
path = "src/basic_timewarp.rs"